--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,7 @@
     "jsxSingleQuote": false,
     "bracketSpacing": true,
     "bracketSameLine": false,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "plugins": ["prettier-plugin-tailwindcss"]
+
 }
